--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,7 +19,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/umeng-analytics-v5.6.7.jar')
+    // compile fileTree(dir: 'libs', include: ['*.jar'])
+    // compile files('libs/umeng-analytics-v5.6.7.jar')
+    compile 'com.umeng.analytics:analytics:6.1.2'
     compile 'com.facebook.react:react-native:+'
 }
