--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,11 +21,12 @@ android {
 dependencies {
     // compile fileTree(dir: 'libs', include: ['*.jar'])
     // compile files('libs/umeng-analytics-v5.6.7.jar')
-    compile ( 'com.umeng.analytics:analytics:6.1.2' )
-    {
-        exclude group: 'com.umeng.analytics.pro'
-        exclude group: 'com.umeng.analytics.game'
-        exclude group: 'com.umeng.analytics.social'
-    }
+    compile 'com.umeng.analytics:analytics:6.1.2'
+//    compile ( 'com.umeng.analytics:analytics:6.1.2' )
+//    {
+//        exclude group: 'com.umeng.analytics.pro'
+//        exclude group: 'com.umeng.analytics.game'
+//        exclude group: 'com.umeng.analytics.social'
+//    }
     compile 'com.facebook.react:react-native:+'
 }
